Switching to ensembl/external and homebrew-core
A number of formulas have moved either to ensembl/external or into the core homebrew taps as homebrew-science is no longer available. This should be all of them

--- a/yml/assembly-mapping.yml
+++ b/yml/assembly-mapping.yml
@@ -1,7 +1,7 @@
 ---
 "assembly-mapping":
-    version: 1
+    version: 2
     deps:
-        - "homebrew/science/lastz"
+        - "ensembl/external/lastz"
         # kent needed for axtBest
-        - "ensembl/ensembl/kent"
+        - "ensembl/external/kent"
