--- a/yml/compara-proteintrees.yml
+++ b/yml/compara-proteintrees.yml
@@ -1,27 +1,27 @@
 ---
 "compara-proteintrees":
-    version: 0.4
+    version: 0.5
     deps:
-        - "homebrew/science/hmmer"
-        - "homebrew/science/hmmer2"
-        - "ensembl/ensembl/blast"
-        - "homebrew/science/mafft"
-        - "homebrew/science/kalign"
-        - "homebrew/science/muscle"
-        - "homebrew/science/clustal-w"
-        - "ensembl/ensembl/t-coffee"
+        - "ensembl/external/hmmer"
+        - "ensembl/external/hmmer2"
+        - "ensembl/external/blast"
+        - "ensembl/external/mafft"
+        - "ensembl/external/kalign"
+        - "ensembl/external/muscle"
+        - "ensembl/external/clustal-w"
+        - "ensembl/external/t-coffee"
         - "ensembl/ensembl/hclustersg"
         - "ensembl/ensembl/treebest"
-        - "homebrew/science/quicktree"
+        - "ensembl/external/quicktree"
         - "ensembl/ensembl/paml43"
         - "ensembl/ensembl/ktreedist"
         - "ensembl/ensembl/raxml-get-patterns"
         - "ensembl/ensembl/noisy"
         - "ensembl/ensembl/notung"
-        - "homebrew/science/fasttree"
+        - "ensembl/external/fasttree"
         - "ensembl/ensembl/prottest3"
-        - "homebrew/science/trimal"
+        - "ensembl/external/trimal"
         - "ensembl/ensembl/cafe"
-        - "ensembl/ensembl/prank"
-        - "homebrew/science/cd-hit"
+        - "ensembl/external/prank"
+        - "ensembl/external/cd-hit"
         - "ensembl/ensembl/pantherscore"
