--- a/yml/compara-speciestree.yml
+++ b/yml/compara-speciestree.yml
@@ -2,6 +2,6 @@
 "compara-speciestree":
     version: 0.1
     deps:
-        - "homebrew/science/mash"
+        - "ensembl/external/mash"
         - "ensembl/ensembl/rapidnj"
         - "ensembl/ensembl/erable"
