--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -1,20 +1,20 @@
 ---
 "compara":
-    version: 0.8
+    version: 0.9
     deps:
-        - "ensembl/ensembl/exonerate22"
-        - "homebrew/science/infernal"
-        - "homebrew/science/hmmer"
-        - "homebrew/science/hmmer2"
-        - "ensembl/ensembl/blast"
-        - "homebrew/science/mafft"
-        - "homebrew/science/kalign"
-        - "homebrew/science/muscle"
-        - "homebrew/science/clustal-w"
-        - "ensembl/ensembl/t-coffee"
+        - "ensembl/external/exonerate22"
+        - "ensembl/external/infernal"
+        - "ensembl/external/hmmer"
+        - "ensembl/external/hmmer2"
+        - "ensembl/external/blast"
+        - "ensembl/external/mafft"
+        - "ensembl/external/kalign"
+        - "ensembl/external/muscle"
+        - "ensembl/external/clustal-w"
+        - "ensembl/external/t-coffee"
         - "ensembl/ensembl/hclustersg"
         - "ensembl/ensembl/treebest"
-        - "homebrew/science/quicktree"
+        - "ensembl/external/quicktree"
         - "ensembl/ensembl/paml43"
         - "ensembl/ensembl/ktreedist"
         - "ensembl/ensembl/raxml-get-patterns"
@@ -22,22 +22,22 @@
         - "ensembl/ensembl/notung"
         - "ensembl/ensembl/pecan"
         - "ensembl/ensembl/ortheus"
-        - "homebrew/science/fasttree"
+        - "ensembl/external/fasttree"
         - "ensembl/ensembl/prottest3"
-        - "homebrew/science/trimal"
+        - "ensembl/external/trimal"
         - "ensembl/ensembl/badirate"
         - "ensembl/ensembl/cafe"
         - "ensembl/ensembl/gerp"
-        - "homebrew/science/mcl"
-        - "ensembl/ensembl/prank"
+        - "ensembl/external/mcl"
+        - "ensembl/external/prank"
         - "ensembl/ensembl/r2r"
         - "ensembl/ensembl/phast"
-        - "homebrew/science/lastz"
-        - "ensembl/ensembl/kent"
+        - "ensembl/external/lastz"
+        - "ensembl/external/kent"
         - "ensembl/ensembl/parsimonator"
         - "ensembl/ensembl/cndsrc"
         - "ensembl/ensembl/semphy"
-        - "homebrew/science/cd-hit"
+        - "ensembl/external/cd-hit"
         - "ensembl/ensembl/pantherscore"
         - "ensembl/ensembl/enredo"
         - "ensembl/ensembl/raxml"
@@ -45,6 +45,6 @@
         - "ensembl/ensembl/phyldog"
         - "ensembl/ensembl/hal"
         - "ensembl/ensembl/progressive_cactus"
-        - "homebrew/science/mash"
+        - "ensembl/external/mash"
         - "ensembl/ensembl/rapidnj"
         - "ensembl/ensembl/erable"
