--- a/yml/eg-core-stats.yml
+++ b/yml/eg-core-stats.yml
@@ -1,6 +1,6 @@
 ---
 # Required for CoreStatistics pipeline
 "eg-core-stats":
-    version: 1
+    version: 2
     deps:
-        - "ensembl/ensembl/emboss"
+        - "ensembl/external/emboss"
