--- a/yml/genebuild-annotation.yml
+++ b/yml/genebuild-annotation.yml
@@ -1,29 +1,29 @@
 ---
 "genebuild-annotation":
-    version: 2.7
+    version: 2.8
     deps:
-        - "ensembl/ensembl/exonerate09"
-        - "ensembl/ensembl/exonerate22"
+        - "ensembl/external/exonerate09"
+        - "ensembl/external/exonerate22"
         - "ensembl/ensembl/ensc"
         - "ensembl/ensembl/bioperl-161"
-        - "ensembl/ensembl/blast"
+        - "ensembl/external/blast"
         - "ensembl/ensembl/eponine"
-        - "homebrew/science/genewise"
-        - "homebrew/science/trnascan"
+        - "ensembl/external/genewise"
+        - "ensembl/external/trnascan"
         - "ensembl/moonshine/genscan"
         - "ensembl/moonshine/pmatch"
         - "ensembl/ensembl/genblast"
         - "ensembl/ensembl/vienna-rna"
-        - "ensembl/ensembl/infernal10"
-        - "homebrew/science/muscle"
-        - "ensembl/ensembl/kent"
-        - "ensembl/ensembl/rmblast"
-        - "homebrew/science/trf"
-        - "homebrew/science/recon"
-        - "homebrew/science/repeatscout"
-        - "ensembl/ensembl/repeatmodeler"
-        - "ensembl/ensembl/repeatmasker"
+        - "ensembl/external/infernal10"
+        - "ensembl/external/muscle"
+        - "ensembl/external/kent"
+        - "ensembl/external/rmblast"
+        - "ensembl/external/trf"
+        - "ensembl/external/recon"
+        - "ensembl/external/repeatscout"
+        - "ensembl/external/repeatmodeler"
+        - "ensembl/external/repeatmasker"
         - "ensembl/moonshine/tcdust"
-        - "homebrew/science/sratoolkit"
+        - "sratoolkit"
         - "ensembl/ensembl/aspera-client"
 
