--- a/yml/compara-epo.yml
+++ b/yml/compara-epo.yml
@@ -3,7 +3,7 @@
     version: 0.2
     deps:
         - "ensembl/external/exonerate22"
-        - "homebrew/science/hmmer"
+        - "ensembl/external/hmmer"
         - "ensembl/external/blast"
         - "ensembl/ensembl/treebest"
         - "ensembl/ensembl/pecan"
