--- a/yml/eg-alignment.yml
+++ b/yml/eg-alignment.yml
@@ -1,7 +1,7 @@
 ---
 # Required for AlignmentXref, BlastProtein, SequenceAlignment pipelines
 "eg-alignment":
-    version: 3
+    version: 3.1
     deps:
         - "ensembl/external/blast"
         # EMBOSS required for 'trimest'
@@ -11,7 +11,8 @@
         - "ensembl/external/exonerate24"
         - "formula": "fontconfig"
           "options": ["without-docs"]
-        - "genometools"
+        # Commenting out as ATMO we cannot compile harfbuzz and that blocks the install
+        # - "genometools"
         - "bowtie2"
         - "bwa"
         - "ensembl/external/gmap-gsnap"
