Moving from using nginx to nginx full with additional modules and paramters

--- a/yml/production-infrastructure.yml
+++ b/yml/production-infrastructure.yml
@@ -1,8 +1,8 @@
 ---
 "production-infrastructure":
-    version: 3
+    version: 4
     deps:
         - "erlang"
-        - "nginx"
+        - "nginx-full"
 
 
