Switched back to using standard nginx with with-http_sub_module module

--- a/yml/production-infrastructure.yml
+++ b/yml/production-infrastructure.yml
@@ -1,8 +1,8 @@
 ---
 "production-infrastructure":
-    version: 4
+    version: 5
     deps:
         - "erlang"
-        - "nginx-full"
-
-
+        -
+          "formula" : "nginx"
+          "options" : ["with-http_sub_module"]
