--- a/yml/production-infrastructure.yml
+++ b/yml/production-infrastructure.yml
@@ -1,8 +1,7 @@
 ---
 "production-infrastructure":
-    version: 5
+    version: 6
     deps:
         - "erlang"
-        -
-          "formula" : "nginx"
+        - "formula" : "homebrew/nginx/nginx-full"
           "options" : ["with-http_sub_module"]
