Added nginx HTTP Sub support

--- a/yml/production-infrastructure.yml
+++ b/yml/production-infrastructure.yml
@@ -1,6 +1,8 @@
 ---
 "production-infrastructure":
-    version: 7
+    version: 8
     deps:
         - "erlang"
-        - "ensembl/web/nginx-full"
+        -
+          "formula" : "ensembl/web/nginx-full"
+          "options" : ["with-sub"]
