--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -1,6 +1,6 @@
 ---
 "compara":
-    version: 0.9
+    version: '0.10'
     deps:
         - "ensembl/external/exonerate22"
         - "ensembl/external/infernal"
@@ -48,3 +48,4 @@
         - "ensembl/external/mash"
         - "ensembl/ensembl/rapidnj"
         - "ensembl/ensembl/erable"
+        - "ensembl/ensembl/bioperl-run-169"
