The system is mature enough to drop the 0. style versions

--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -1,6 +1,6 @@
 ---
 "compara":
-    version: '0.10'
+    version: 10
     deps:
         - "ensembl/external/exonerate22"
         - "ensembl/external/infernal"
