--- a/yml/funcgen.yml
+++ b/yml/funcgen.yml
@@ -1,5 +1,6 @@
 ---
 "funcgen":
-    version: 0.1
+    version: 0.2
     deps:
         - "ensembl/ensembl/moods"
+        - "ensembl/ensembl/biosd"
