web-base updates
1) Added gcc as dependency
2) Now using perl 5.26 from homebrew-web. Core is hosting 5.28
3) Added back Python as I dont see berkeley-db@4 and berkeley-db issues anymore

--- a/yml/web.yml
+++ b/yml/web.yml
@@ -1,10 +1,11 @@
 ---
 "web-base":
-  "version" : 4
+  "version" : 5
   "deps" :
     # General dependencies
-    - "perl"
-    # - "python"
+    - "gcc"
+    - "ensembl/web/perl"
+    - "python"
     - "jdk@8"
     - "git"
     -
