--- a/yml/web.yml
+++ b/yml/web.yml
@@ -30,7 +30,7 @@
     - "ensembl/external/kent"
     - "htslib"
 "web-gui":
-  "version" : 2
+  "version" : 3
   "deps" :
     # Website gui dependnecies
     - "libgd"
@@ -40,6 +40,7 @@
     - "libsass"
     - "sassc"
     - "graphviz"
+    - "ensembl/web/coffeescript"
 "web-bifo":
   "version" : 2
   "deps" :
