Install jdk@8 separately of jdk (just like berkeley-db/berkeley-db@4)
jdk@8 still gets installed, but in `pre-flight`, which runs before `basic-dependencies`

```
linuxbrew@4a25889a9e80:~$ brew install ensembl/cask/basic-dependencies
==> Installing basic-dependencies from ensembl/cask
Error: ensembl/cask/basic-dependencies contains conflicting version recursive dependencies:
  jdk@8, jdk
View these with `brew deps --tree ensembl/cask/basic-dependencies`.
linuxbrew@4a25889a9e80:~$ brew deps --tree ensembl/cask/basic-dependencies
ensembl/cask/basic-dependencies
├── git
│   ├── curl
│   │   └── openssl
│   ├── expat
│   │   └── libbsd
│   ├── openssl
│   └── zlib
├── autoconf
│   └── m4
├── ack
├── jdk@8
├── bzip2
├── readline
│   └── ncurses
├── sqlite
│   └── readline
│       └── ncurses
├── gdbm
├── ant
│   └── jdk
├── maven
│   └── jdk
└── open-mpi
    ├── gcc
    │   ├── zlib
    │   ├── gmp
    │   ├── libmpc
    │   │   ├── gmp
    │   │   └── mpfr
    │   │       └── gmp
    │   ├── mpfr
    │   │   └── gmp
    │   └── isl@0.18
    │       └── gmp
    └── libevent
        └── openssl
```

It is not considered an error in linuxbrew:
See https://github.com/Homebrew/brew/issues/2888

> we just don't support installing two versions of the same software in the same dependency tree. This is because it's bad packaging.

--- a/yml/basic-dependencies.yml
+++ b/yml/basic-dependencies.yml
@@ -1,11 +1,10 @@
 ---
 "basic-dependencies":
-    version: 9
+    version: 10
     deps:
         - "git"
         - "autoconf"
         - "ack"
-        - "jdk@8"
         - "bzip2"
         - "readline"
         - "sqlite"
@@ -15,8 +14,9 @@
         - "maven"
         - "formula" : "open-mpi"
           "options" : ["with-mpi-thread-multiple", "with-cxx-bindings", "c++11"]
-# Needed to get away from the issues of berkeley-db and berkeley-db@4 clashes
+# Needed to get away from the issues of berkeley-db and berkeley-db@4, and jdk and jdk@8 clashes
 "pre-flight":
-    version: 2
+    version: 3
     deps:
       - berkeley-db 
+      - "jdk@8"
