--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -49,3 +49,4 @@
         - "ensembl/ensembl/rapidnj"
         - "ensembl/ensembl/erable"
         - "ensembl/ensembl/bioperl-run-169"
+        - "samtools"
