Adding java 11 as a requirement for Protein features since version 76

--- a/yml/protein-features.yml
+++ b/yml/protein-features.yml
@@ -1,8 +1,9 @@
 ---
 "protein-features":
-    version: 10
+    version: 11
     deps:
         - "ensembl/ensembl/interproscan"
         - "ensembl/moonshine/seg"
+        - "ensembl/external/openjdk-11"
 
 
