adding cactus to cask

--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -49,3 +49,4 @@
         - "ensembl/ensembl/bioperl-run-169"
         - "samtools"
         - "ensembl/external/diamond"
+        - "ensembl/ensembl/cactus"
