--- a/yml/compara.yml
+++ b/yml/compara.yml
@@ -8,7 +8,7 @@
         - "ensembl/external/hmmer"
         - "ensembl/external/hmmer2"
         - "ensembl/external/blast"
-        - "ensembl/external/mafft"
+        - "ensembl/external/mafft@7.427"
         - "ensembl/external/kalign"
         - "ensembl/external/muscle"
         - "ensembl/external/clustal-w"
@@ -42,7 +42,6 @@
         - "ensembl/ensembl/enredo"
         - "ensembl/ensembl/raxml"
         - "ensembl/ensembl/examl"
-        - "ensembl/ensembl/hal"
         - "ensembl/external/mash"
         - "ensembl/ensembl/rapidnj"
         - "ensembl/ensembl/erable"
