--- a/yml/genebuild-annotation.yml
+++ b/yml/genebuild-annotation.yml
@@ -25,8 +25,9 @@
         - "ensembl/external/repeatscout"
         - "ensembl/external/repeatmodeler"
         - "ensembl/external/repeatmasker"
-        - "ensembl/moonshine/tcdust"
-        - "ensembl/external/sratoolkit"
         - "ensembl/ensembl/aspera-client"
+        - "ensembl/external/sratoolkit@2.11.0"
         - "ensembl/ensembl/Red"
         - "ensembl/ensembl/minimap2"
+        - "ensembl/ensembl/scallop"
+        - "ensembl/ensembl/star-aligner"
