Use openjdk instead of removed adoptopenjdk

--- a/yml/basic-dependencies.yml
+++ b/yml/basic-dependencies.yml
@@ -17,7 +17,7 @@
           "options" : ["with-mpi-thread-multiple", "with-cxx-bindings", "c++11"]
 # Needed to get away from the issues of berkeley-db and berkeley-db@4, and jdk and adoptopenjdk clashes
 "pre-flight":
-    version: 3
+    version: 4
     deps:
       - berkeley-db 
-      - "adoptopenjdk"
+      - openjdk
